--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:3xpKhyWLUQzjDGyVg89ECL9MKqJDW7GibsvWLam3ZxM=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://nut-yes.music-assistant
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=music_assistant
+DB_USERNAME=music_assistant
+DB_PASSWORD=music_Test!
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
